Started displaying camp data

--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,3 +1,10 @@
-<p>
-  error works!
-</p>
+
+<div class="container margin-top-20">
+  <h1>
+    Error 404
+  </h1>
+  <h3>
+    The page you're trying to reach can't be found.
+  </h3>
+  <button class="btn btn-info margin-top-10" routerLink="/overview"><i class="fas fa-home"></i> Home</button>
+</div>
