--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top">
   <a class="navbar-brand" href="#!">Carpool zomerkampen</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" (click)="isCollapsed = !isCollapsed">
     <span class="navbar-toggler-icon"></span>
@@ -14,6 +14,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/drivers" routerLinkActive="active">Drivers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/camps" routerLinkActive="active">Camps</a>
       </li>
     </ul>
     <ul class="navbar-nav">
