--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container">
+<div class="container margin-top-20">
   <div class="row">
     <div class="col-12">
       <router-outlet></router-outlet>
